Poprawione mutation oray evolution - w mutation: dałem pobieranie LinkedList - w evolution dałem warunek sprawdzajacy czy mutacja ma sie wykonac